pamc/src/tests/sample_code/should_fail/ast_simplification/labeled_params/unlabeled_before_implicit.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(x: Nat, ~y: Nat): Nat {
    Nat.O
};
